SERVER-41872 PlanEnumerator AndAssignment::choices ordering not stable and is relevant to set of plans generated

(cherry picked from commit 6ca9be706ce03a2c79d29feac3cfd294cc09445d)